feat: Add tests for ExtendedFluentFilter and ExtendedRegexFilter classes